--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,5 @@
 *{
-margin: 0%;
-padding: 0%;
+
 font-family: 'Open Sans', sans-serif;
 
 }
@@ -21,10 +20,11 @@ font-family: 'Open Sans', sans-serif;
     nav{
         display: flex;
         align-items: center;
+        margin: 0px 150px;
         justify-content: space-between;
         
     }
-    nav-title{
+    .nav-title{
         color: #181818;
         font-size: 45px;
         font-style: normal;
@@ -43,4 +43,19 @@ font-family: 'Open Sans', sans-serif;
 nav a{
     text-decoration: none;
     color:#474747;
+}
+.header{
+    background: #FFF8F3;
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.banner .profile-img{
+    width: 500px;
+
+}
+.banner-contant{
+
 }
