--- a/styles/style.css
+++ b/styles/style.css
@@ -171,3 +171,11 @@ line-height: 28px;
     text-align: center;
     margin-top: 30px;
 }
+
+/* footer section */
+footer{
+display: flex;
+background: #FFF8F3;
+padding: 130px 230px;
+margin-top: 100px;
+}
