--- a/styles/style.css
+++ b/styles/style.css
@@ -175,7 +175,23 @@ line-height: 28px;
 /* footer section */
 footer{
 display: flex;
+gap: 100px;
 background: #FFF8F3;
 padding: 130px 230px;
 margin-top: 100px;
 }
+.footer-column{
+    width: 50%;
+}
+.social-links a{
+    margin-right: 17px;
+}
+.contact input[type="text"] ,input[type="email"] , textarea  {
+    width: 451px;
+ display: block;
+ margin-bottom: 24px;
+ padding: 18px 30px;
+ border: none;
+ Your name
+color:  #757575;
+} 
