--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 *{
-
+margin: 0%;
 font-family: 'Open Sans', sans-serif;
 
 }
@@ -7,7 +7,6 @@ font-family: 'Open Sans', sans-serif;
     color: #FD6E0A;
 }
 .btn-primary{
-  
     border-radius: 5px;
     background: #FD6E0A;
     border: none;
@@ -24,13 +23,15 @@ font-family: 'Open Sans', sans-serif;
         justify-content: space-between;
         
     }
-    .nav-title{
-        color: #181818;
-        font-size: 45px;
-        font-style: normal;
-        font-weight: 800;
-        line-height: normal;
+
+    .header-logo{
+        width: 240px;
     }
+    /* .nav-title{
+        color: #181818;
+        font-size: 35px;
+        font-weight: 800;
+    } */
     nav > ul{
         display: flex;
         align-items: center;
@@ -47,7 +48,8 @@ nav a{
 .header{
     background:url(../images/header_bg.png),url(../images/developer.png), #FFF8F3;
     background-repeat: no-repeat;
-    background-position: bottom right , top left;
+    background-position: bottom right , 25px center;
+    background-size: 0px , 85px;
     
     
 }
@@ -64,7 +66,10 @@ nav a{
 .banner-contant{
 max-width: 500px;
 }
-
+.header-description{
+    margin-bottom: 30px;
+    margin-top: 10px;
+}
 /* main section  styles*/
 main{
 max-width: 1140px;
@@ -86,15 +91,16 @@ main section{
 }
 /* about section styles */
 .about{
-    padding: 130px;
+    padding: 70px;
     border-radius: 10px;
 background: #FFF8F3;
-margin: 130px 0px
+margin: 130px 100px
 
 }
 
 .section-title{
-    color:#181818;
+    margin-bottom: 30px;
+color:#181818;
 text-align: center;
 font-size: 35px;
 font-weight: 700;
@@ -105,6 +111,7 @@ line-height: normal;
     color:#757575;
     font-size: 18px;
     text-align: center;
+    margin-bottom: 20px;
 }
 .about-info-container{
     display: flex;
@@ -113,6 +120,7 @@ line-height: normal;
 }
 .about-info{
     text-align: center;
+    margin-right: 20px;
 }
 
 /* skill section  */
@@ -121,16 +129,15 @@ line-height: normal;
 }
 
 .skill-container{
-
+  padding: 0px 10px 0px 50px ;
   display: flex;
-  gap: 24px;  
+  align-items: center;
 }
 .skill{
     padding: 30px;
-   
     box-shadow: 0px 0px 15px rgb(0, 0, 0,.07);
     border-radius: 8px;
-    margin-right: 20px;
+    margin-right: 30px;
 }
 .skill-description{
     color:  #757575;
@@ -146,6 +153,8 @@ line-height: normal;
     display:flex;
     gap: 60px ;
     justify-content: center;
+     padding: 0px 60px 0px 60px;
+   
 }
 .resume-item-title{
 color: #474747;
@@ -173,7 +182,75 @@ line-height: 28px;
     text-align: center;
     margin-top: 30px;
 }
-
+/* protfolio section  */
+.protpolio{
+    height: auto
+    width: 100%;
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+  }
+  .protpolio .box1{
+    overflow: hidden;
+    margin-left: 30px;
+    margin-top: 30px;
+    height: 450px;
+    width: 300px;
+    background: white;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, .1);
+  
+  justify-content: center;
+  }
+  
+  .protpolio .box1 img {
+    transition: 3s;
+    width:100%;
+  
+  }
+  .protpolio .box1:hover img {
+    transform: translateY(-63%);
+  
+  }
+  
+  
+  
+  .protpolio .box1:nth-child(3):hover img {
+    transform: translateY(-64%);
+  
+  }
+  
+  .protpolio .box1:nth-child(4):hover img {
+    transform: translateY(-67%);
+  
+  }
+  
+  .protpolio .box1:nth-child(5):hover img {
+    transform: translateY(-64.56%);
+  
+  }
+  
+  .protpolio .box1:nth-child(6):hover img {
+    transform: translateY(-59.5%);
+  
+  }
+  
+  .protpolio .box1:nth-child(7):hover img {
+    transform: translateY(-53%);
+  
+  }
+  
+  .protpolio .box1:nth-child(8):hover img {
+    transform: translateY(-64%);
+  
+  }
+  
+  
+  
+  
+  
+  
 /* footer section */
 footer{
 display: flex;
